--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,15 +1,7 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+#CloudText{
+  font-family: 'Press Start 2P', cursive;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
-}
